# GADARAH

./: .gitignore  Cargo.toml  Gplan.md  OPUSPLAN.md  PROJECT_READINESS_2026-04-16.md  README.md  SYNTHESIS.md  ULTIMATE.md  data_import_steps.md  gptplan.md  plan.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
ci/: build-windows.sh
config/: gadarah.toml
config/compliance/: fundingpips_blackouts.toml
config/firms/: alphaone.toml  blueguardian.toml  ftmo_1step.toml  ftmo_2step.toml  fundingpips.toml  fundingpips_1step.toml  fundingpips_zero.toml  the5ers_hypergrowth.toml
crates/gadarah-backtest/: Cargo.toml
crates/gadarah-backtest/src/: challenge_sim.rs  engine.rs  error.rs  lib.rs  monte_carlo.rs  replayer.rs  stats.rs  stress_test.rs  walk_forward.rs
crates/gadarah-backtest/src/stress/: broker_disconnect.rs  flash_crash.rs  mod.rs  news_gap.rs  slippage_shock.rs  weekend_gap.rs
crates/gadarah-broker/: Cargo.toml  build.rs
crates/gadarah-broker/src/: auth.rs  client.rs  codec.rs  ctrader.rs  error.rs  lib.rs  messages.rs  mock.rs  traits.rs  types.rs
crates/gadarah-cli/: Cargo.toml
crates/gadarah-cli/src/: config.rs  dataset_cli.rs  main.rs  phase1.rs  synth.rs  tuner.rs
crates/gadarah-core/: Cargo.toml
crates/gadarah-core/src/: decimal_math.rs  htf_bias.rs  lib.rs  regime.rs  session.rs  types.rs
crates/gadarah-core/src/exit/: mod.rs  trail.rs
crates/gadarah-core/src/heads/: asian_range.rs  breakout.rs  grid.rs  mod.rs  momentum.rs  news.rs  scalp_m1.rs  scalp_m5.rs  smc.rs  trend.rs  vol_profile.rs
crates/gadarah-core/src/indicators/: adx.rs  atr.rs  bb_width_pctile.rs  bollinger.rs  choppiness.rs  ema.rs  hurst.rs  mod.rs  rsi.rs  vwap.rs
crates/gadarah-core/src/meta/: ensemble.rs  mod.rs  mtf_confirm.rs  orderflow.rs  regime_gate.rs  signal_scorer.rs  vol_adjust.rs
crates/gadarah-data/: Cargo.toml
crates/gadarah-data/src/: aggregator.rs  audit.rs  csv_import.rs  dataset.rs  dataset_pipeline.rs  db.rs  downloader.rs  dukascopy.rs  error.rs  gap_filler.rs  journal.rs  lib.rs  schema.rs  store.rs  trades.rs  volume_processor.rs
crates/gadarah-feed/: Cargo.toml
crates/gadarah-feed/src/: binance.rs  error.rs  lib.rs  types.rs
crates/gadarah-gui/: Cargo.toml
crates/gadarah-gui/src/: config.rs  first_run.rs  lib.rs  main.rs  notifications.rs  single_instance.rs  state.rs  theme.rs  tray.rs  update_check.rs
crates/gadarah-gui/src/oracle/: auto_prompt.rs  client.rs  config.rs  mod.rs  model.rs  prompt.rs  task.rs
crates/gadarah-gui/src/ui/: backtest.rs  config_tab.rs  dashboard.rs  logs.rs  mod.rs  oracle.rs  payout.rs  performance.rs  price_chart.rs  sessions.rs  trading.rs  welcome.rs
crates/gadarah-gui/src/widgets/: acv.rs  alert_banner.rs  demo_banner.rs  mod.rs  ornaments.rs
crates/gadarah-gui/src/widgets/mascot/: bubble.rs  mod.rs  painter.rs  voice.rs
crates/gadarah-risk/: Cargo.toml
crates/gadarah-risk/src/: account.rs  compliance.rs  consistency.rs  correlation.rs  daily_pnl.rs  drift.rs  equity_curve.rs  execution.rs  gate.rs  kill_switch.rs  lib.rs  performance_ledger.rs  pyramid.rs  sizing.rs  swap.rs  temporal.rs  trade_manager.rs  types.rs
crates/gadarah-wizard/: Cargo.toml  build.rs
crates/gadarah-wizard/src/: assistant.rs  install.rs  main.rs  theme.rs  uninstall.rs
crates/gadarah-wizard/src/tabs/: components.rs  finish.rs  install.rs  license.rs  mod.rs  welcome.rs
deploy/: gadarah.service
scripts/: fetch_data.py
wix/: INSTALLER_README.md  install_ollama.ps1  main.wxs
