[workspace]
resolver = "2"
members = [
    "crates/gadarah-core",
    "crates/gadarah-risk",
    "crates/gadarah-broker",
    "crates/gadarah-data",
    "crates/gadarah-backtest",
    "crates/gadarah-cli",
    "crates/gadarah-feed",
    "crates/gadarah-gui",
]

[workspace.dependencies]
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
rust_decimal_macros = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"
prost-build = "0.13"
proptest = "1"
rand = "0.8"
thiserror = "2"
bytes = "1.5"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls"] }
tungstenite = { version = "0.24", features = ["rustls"] }
rustls = "0.23"
webpki-roots = "0.26"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
