[package]
name = "gadarah-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
gadarah-risk = { path = "../gadarah-risk" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
rustls = { workspace = true }
rand = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
