[package]
name = "gadarah-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gadarah"
path = "src/main.rs"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
gadarah-risk = { path = "../gadarah-risk" }
gadarah-broker = { path = "../gadarah-broker" }
gadarah-data = { path = "../gadarah-data" }
gadarah-backtest = { path = "../gadarah-backtest" }
gadarah-feed = { path = "../gadarah-feed" }
tokio = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
