[package]
name = "gadarah-core"
version = "2.1.2"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
