[package]
name = "gadarah-data"
version = "2.1.6"
edition = "2021"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
lzma-rs = "0.3"
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
