[package]
name = "gadarah-feed"
version = "2.1.5"
edition = "2021"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
url = "2"