[package]
name = "gadarah-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
gadarah-risk = { path = "../gadarah-risk" }
gadarah-backtest = { path = "../gadarah-backtest" }
gadarah-broker = { path = "../gadarah-broker" }
gadarah-data = { path = "../gadarah-data" }

# GUI
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui = "0.31"
egui_plot = "0.31"

# Random for demos
rand = { workspace = true }

# Async
tokio = { workspace = true }

# Data
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Database
rusqlite = { workspace = true }

[features]
default = []
