[package]
name = "gadarah-risk"
version = "2.3.0"
edition = "2021"

[dependencies]
gadarah-core = { path = "../gadarah-core" }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
