[package]
name = "gadarah-wizard"
version = "0.1.0"
edition = "2021"
description = "Standalone installation wizard for GADARAH. Wraps the MSI payload with a tabbed UI and an animated Binder assistant."

[[bin]]
name = "gadarah-wizard"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
serde = { workspace = true }
toml = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["x11", "wayland"] }

[features]
default = []
