[package]
name = "gadarah-wizard"
version = "2.1.5"
edition = "2021"
description = "Standalone installation wizard for GADARAH. Wraps the MSI payload with a tabbed UI and an animated Binder assistant."

[[bin]]
name = "gadarah-wizard"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
serde = { workspace = true }
toml = { workspace = true }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.31", default-features = false, features = ["x11", "wayland"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"

[features]
default = []
